--- a/public/front-template/css/style.css
+++ b/public/front-template/css/style.css
@@ -14,7 +14,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #306EE8;
+  --bs-deepdark: #20232a;
+  --bs-dark: #282c34;
+  --bs-purple: #5c00ce;
+  /* --bs-blue: #306EE8;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
@@ -63,8 +66,8 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
-  --bs-body-bg: #fff; }
+  --bs-body-color: #212529; */
+  }
 
 *,
 *::before,
@@ -84,7 +87,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  /* background-color: var(--bs-body-bg); */
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
@@ -540,7 +543,8 @@ progress {
 
 @media (min-width: 1400px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
-    max-width: 1320px; } }
+    /* max-width: 1320px; */
+    max-width: 1170px; } }
 
 .row {
   --bs-gutter-x: 1.5rem;
@@ -2492,7 +2496,7 @@ textarea.form-control-lg {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  /* color: #212529; */
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -2517,7 +2521,8 @@ textarea.form-control-lg {
       -o-transition: none;
       transition: none; } }
   .btn:hover {
-    color: #212529; }
+    /* color: #212529;  */
+  }
   .btn-check:focus + .btn, .btn:focus {
     outline: 0;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(33, 66, 82, 0.25);
@@ -3371,18 +3376,21 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #214252;
+  /* color: #214252; */
   text-decoration: none;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; 
+}
+
   @media (prefers-reduced-motion: reduce) {
     .nav-link {
       -webkit-transition: none;
       -o-transition: none;
       transition: none; } }
   .nav-link:hover, .nav-link:focus {
-    color: #1a3542; }
+    /* color: #1a3542; */
+   }
   .nav-link.disabled {
     color: #6c757d;
     pointer-events: none;
@@ -9258,7 +9266,7 @@ textarea.form-control-lg {
 .site-nav {
   position: relative;
   width: 100%;
-  background-color: #214252;
+  /* background-color: #212222; */
   padding: 10px 0; }
 
 .site-nav h1, .site-nav .h1 {
@@ -9639,7 +9647,7 @@ body {
   font-weight: 400;
   font-size: 15px;
   overflow-x: hidden;
-  color: #848d92;
+  /* color: #848d92; */
   position: relative; }
   body:before {
     content: "";
@@ -9671,26 +9679,30 @@ a, .btn {
 .bg-light {
   background-color: #efefef; }
 
-.btn {
+/* .btn {
   padding: 15px 20px;
   border-radius: 4px;
   border-color: none;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: .1rem;
-  text-transform: uppercase; }
+  text-transform: uppercase; 
+} */
   .btn.active, .btn:focus {
     outline: none;
     -webkit-box-shadow: none;
     box-shadow: none; }
   .btn.btn-primary {
     color: #fff;
-    background-color: #214252; }
-    .btn.btn-primary:hover {
-      border-color: #214252; }
-  .btn.btn-outline-primary {
-    color: #214252; }
-    .btn.btn-outline-primary:hover {
+    background-color: #5c00ce;
+   }
+    /* .btn.btn-primary:hover {
+      border-color: #214252;
+     } */
+  /* .btn.btn-outline-primary {
+    color: #214252;
+   } */
+    /* .btn.btn-outline-primary:hover {
       color: #fff; }
   .btn.btn-outline-white {
     border-color: #fff;
@@ -9723,13 +9735,14 @@ a, .btn {
       top: 50%;
       -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
-      transform: translateY(-50%); }
+      transform: translateY(-50%); } */
 
-.form-control {
+/* .form-control {
   height: 54px;
   border-color: rgba(0, 0, 0, 0.1);
   background-color: transparent !important;
-  margin-bottom: 10px; }
+  margin-bottom: 10px; 
+} */
   .form-control:active, .form-control:focus {
     outline: none;
     -webkit-box-shadow: none;
@@ -9751,8 +9764,8 @@ textarea {
   position: relative; }
 
 .section {
-  padding-top: 4rem;
-  padding-bottom: 4rem; }
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
   .section .heading {
     font-size: 30px;
     font-weight: 700; }
@@ -9779,6 +9792,8 @@ textarea {
 
 .retro-layout .v-height {
   height: 240px; }
+.retro-layout .b-height {
+  height: 511px; }
 
 @media (max-width: 767.98px) {
   .retro-layout .img {
@@ -9787,7 +9802,7 @@ textarea {
 .retro-layout .h-entry {
   display: block;
   position: relative;
-  border-radius: 10px;
+  border-radius: 5px;
   overflow: hidden; }
   .retro-layout .h-entry .post-category {
     color: #fff; }
@@ -9967,7 +9982,7 @@ textarea {
 .posts-entry-title {
   text-transform: uppercase;
   font-size: 20px;
-  color: #000;
+  /* color: #323131; */
   letter-spacing: .05rem; }
 
 .posts-entry .blog-entry .img-link {
@@ -9981,7 +9996,7 @@ textarea {
   line-height: 1.3;
   font-size: 26px; }
   .posts-entry .blog-entry h2 a, .posts-entry .blog-entry .h2 a {
-    color: #4D4C7D; }
+    color: #323131; }
 
 .posts-entry .btn-sm, .posts-entry .btn-group-sm > .btn {
   padding-top: 10px;
@@ -10452,16 +10467,18 @@ textarea {
       color: #000; }
 
 .site-footer {
-  background: #214252;
+  background: #20232a;
   font-size: 14px;
   padding: 70px 0;
-  color: white; }
+  color: white; 
+}
   .site-footer a {
     color: rgba(255, 255, 255, 0.5);
     position: relative;
     display: inline-block; }
     .site-footer a:hover {
-      color: #fff; }
+      /* color: #fff;  */
+    }
   .site-footer .footer-cta h2, .site-footer .footer-cta .h2 {
     font-size: 30px;
     color: #fff; }
@@ -10476,7 +10493,8 @@ textarea {
       letter-spacing: .1rem;
       text-transform: uppercase;
       margin-bottom: 15px;
-      color: #fff; }
+      /* color: #fff;  */
+    }
     .site-footer .widget .links {
       width: 150px; }
       .site-footer .widget .links li {
