--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -1,4 +1,143 @@
  /*---------------------
+  Tours
+-----------------------*/
+
+.tours {
+	padding-top: 150px;
+	padding-bottom: 60px;
+}
+
+.tours__item__text {
+	padding-right: 30px;
+	margin-bottom: 100px;
+}
+
+.tours__item__text.tours__item__text--right {
+	padding-left: 30px;
+	padding-right: 0;
+}
+
+.tours__item__text h2 {
+	font-size: 42px;
+	color: #111111;
+	text-transform: uppercase;
+	margin-bottom: 24px;
+}
+
+.tours__item__text .tours__text__widget {
+	overflow: hidden;
+	border-bottom: 2px solid #f2f2f2;
+	padding-bottom: 38px;
+}
+
+.tours__item__text .tours__text__widget ul {
+	float: left;
+}
+
+.tours__item__text .tours__text__widget ul li {
+	list-style: none;
+	font-size: 15px;
+	color: #111111;
+	padding-left: 35px;
+	position: relative;
+	margin-bottom: 10px;
+}
+
+.tours__item__text .tours__text__widget ul li:last-child {
+	margin-bottom: 0;
+}
+
+.tours__item__text .tours__text__widget ul li i {
+	color: #5c00ce;
+	position: absolute;
+	left: 0;
+	top: 3px;
+}
+
+.tours__item__text .tours__text__widget ul li span {
+	display: inline-block;
+	padding-right: 8px;
+	position: relative;
+	margin-right: 5px;
+}
+
+.tours__item__text .tours__text__widget ul li span:last-child {
+	padding-right: 0;
+	margin-right: 0;
+}
+
+.tours__item__text .tours__text__widget ul li span:last-child:after {
+	display: none;
+}
+
+.tours__item__text .tours__text__widget ul li span:after {
+	position: absolute;
+	right: 0;
+	top: 0;
+	content: "|";
+}
+
+.tours__item__text .tours__text__widget .price {
+	font-size: 18px;
+	color: #ffffff;
+	font-weight: 700;
+	display: inline-block;
+	padding: 14px 25px 12px 30px;
+	background: #5c00ce;
+	float: right;
+}
+
+.tours__item__text .tours__text__desc {
+	padding-top: 40px;
+	margin-bottom: 65px;
+}
+
+.tours__item__text .tours__text__desc p {
+	color: #111111;
+	margin-bottom: 20px;
+}
+
+.tours__item__text .tours__text__desc p:last-child {
+	margin-bottom: 0;
+}
+
+.tours__item__pic {
+	position: relative;
+	z-index: 1;
+	padding-right: 50px;
+	margin-bottom: 110px;
+	padding-left: 30px;
+}
+
+.tours__item__pic.tours__item__pic--left {
+	padding-left: 50px;
+	padding-right: 0;
+}
+
+.tours__item__pic.tours__item__pic--left:after {
+	left: 0;
+}
+
+.tours__item__pic.tours__item__pic--last {
+	margin-bottom: 0;
+}
+
+.tours__item__pic:after {
+	position: absolute;
+	left: 50px;
+	top: -50px;
+	width: calc(100% - 50px);
+	height: 100%;
+	border: 20px solid rgba(9, 53, 247, 0.1);
+	content: "";
+	z-index: -1;
+}
+
+.tours__item__pic img {
+	min-width: 100%;
+}
+ 
+ /*---------------------
   Videos
 -----------------------*/
 .pt-7{
@@ -210,7 +349,7 @@
 	z-index: -1;
 }
 .track {
-	padding-top: 120px;
+	padding-top: 100px;
 	padding-bottom: 40px;
 	overflow: hidden;
 }
@@ -384,4 +523,112 @@
 	width: calc(100% - 40px);
 	margin-left: 40px;
 	height: 502px;
+}
+
+/*---------------------
+  Youtube
+-----------------------*/
+
+.youtube {
+	padding-bottom: 50px;
+}
+
+/* .youtube .section-title {
+	text-align: center;
+} */
+
+.youtube .section-title h1 {
+	font-size: 90px;
+}
+
+.youtube__item {
+	display: flex;
+	align-items: center;
+	-webkit-transition: all, 0.3s;
+	-o-transition: all, 0.3s;
+	transition: all, 0.3s;
+	margin-bottom: 15px;
+}
+
+.youtube__item:hover {
+	-webkit-box-shadow: 0px 3px 30px rgba(22, 41, 124, 0.1);
+	box-shadow: 0px 3px 30px rgba(22, 41, 124, 0.1);
+}
+
+.youtube__item__pic {
+	width: 150px;
+	height: 100px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+}
+
+.youtube__item__pic .play-btn {
+	font-size: 16px;
+	color: #5c00ce;
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+	background: rgba(255, 255, 255, 0.3);
+	display: inline-block;
+	line-height: 60px;
+	text-align: center;
+	position: relative;
+	z-index: 1;
+}
+
+.youtube__item__pic .play-btn i {
+	position: relative;
+	top: 2px;
+	left: 2px;
+}
+
+.youtube__item__pic .play-btn:after {
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	height: 40px;
+	width: 40px;
+	background: #ffffff;
+	border-radius: 50%;
+	content: "";
+	z-index: -1;
+}
+
+.youtube__item__text {
+	padding: 25px 30px 20px 20px;
+	background: #ffffff;
+}
+
+.youtube__item__text h4 {
+	font-size: 17px;
+	color: #1b1b1b;
+	line-height: 34px;
+	font-weight: 700;
+}
+
+.youtube__item__text i{
+	color: red;
+
+}
+
+.title-entry{
+	display: flex;
+	justify-content: space-between;
+}
+.title-entry h3{
+	font-size: 19px;
+	font-weight: 600;
+	color: #ce0048;
+}
+.title-entry p{
+	font-size: 13px;
+	font-weight: 600;
+	color: #1a1919;
 }
