--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -134,7 +134,7 @@
 }
 
 .tours__item__pic img {
-	min-width: 100%;
+	max-width: 100%;
 }
  
  /*---------------------
@@ -354,9 +354,9 @@
 	overflow: hidden;
 }
 
-.track .section-title {
+/* .track .section-title {
 	margin-bottom: 105px;
-}
+} */
 
 .track__content {
 	height: 502px;
@@ -616,6 +616,264 @@
 .youtube__item__text i{
 	color: red;
 
+}
+
+/*---------------------
+  About Services
+-----------------------*/
+
+.about-services {
+	padding-bottom: 50px;
+}
+
+.about-services .section-title {
+	margin-bottom: 60px;
+}
+
+.about__services__item {
+	-webkit-transition: all, 0.3s;
+	-o-transition: all, 0.3s;
+	transition: all, 0.3s;
+}
+
+.about__services__item:hover {
+	-webkit-box-shadow: 0px 3px 30px rgba(22, 41, 124, 0.1);
+	box-shadow: 0px 3px 30px rgba(22, 41, 124, 0.1);
+}
+
+.about__services__item__pic {
+	height: 240px;
+	position: relative;
+}
+
+.about__services__item__pic .icon {
+	height: 50px;
+	width: 50px;
+	background: #5c00ce;
+	border-radius: 50%;
+	line-height: 50px;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	bottom: -25px;
+}
+
+.about__services__item__text {
+	text-align: center;
+	padding: 50px 10px 30px;
+}
+
+.about__services__item__text h4 {
+	font-size: 26px;
+	color: #111111;
+	font-weight: 700;
+	margin-bottom: 12px;
+}
+
+.about__services__item__text p {
+	margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
+# galeri
+--------------------------------------------------------------*/
+.galeri .galeri-item {
+	margin-bottom: 30px;
+  }
+  
+  .galeri #galeri-flters {
+	padding: 0;
+	margin: 0 auto 25px auto;
+	list-style: none;
+	text-align: center;
+	border-radius: 50px;
+	padding: 2px 15px;
+  }
+  
+  .galeri #galeri-flters li {
+	cursor: pointer;
+	display: inline-block;
+	padding: 10px 15px;
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 1;
+	text-transform: uppercase;
+	color: #444444;
+	margin-bottom: 5px;
+	transition: all 0.3s ease-in-out;
+	border-radius: 5px;
+	font-family: "Poppins", sans-serif;
+  }
+  
+  .galeri #galeri-flters li:hover,
+  .galeri #galeri-flters li.filter-active {
+	color: #fff;
+	background: #5846f9;
+  }
+  
+  .galeri #galeri-flters li:last-child {
+	margin-right: 0;
+  }
+  
+  .galeri .galeri-wrap {
+	transition: 0.3s;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+  }
+  
+  .galeri .galeri-wrap::before {
+	content: "";
+	background: rgb(19 19 20 / 80%);
+	position: absolute;
+	left: 30px;
+	right: 30px;
+	top: 30px;
+	bottom: 30px;
+	transition: all ease-in-out 0.3s;
+	z-index: 2;
+	opacity: 0;
+  }
+  
+  .galeri .galeri-wrap .galeri-info {
+	opacity: 0;
+	position: absolute;
+	top: 10%;
+	left: 0;
+	right: 0;
+	text-align: center;
+	z-index: 3;
+	transition: all ease-in-out 0.3s;
+  }
+  
+  .galeri .galeri-wrap .galeri-info h4 {
+	font-size: 20px;
+	color: #fff;
+	font-weight: 600;
+  }
+  
+  .galeri .galeri-wrap .galeri-info p {
+	color: #ffffff;
+	font-size: 14px;
+	text-transform: uppercase;
+  }
+  
+  .galeri .galeri-wrap .galeri-links {
+	opacity: 0;
+	left: 0;
+	right: 0;
+	bottom: 10%;
+	text-align: center;
+	z-index: 3;
+	position: absolute;
+	transition: all ease-in-out 0.3s;
+  }
+  
+  .galeri .galeri-wrap .galeri-links a {
+	color: rgba(255, 255, 255, 0.6);
+	margin: 0 2px;
+	font-size: 50px;
+	display: inline-block;
+	transition: 0.3s;
+  }
+  
+  .galeri .galeri-wrap .galeri-links a:hover {
+	color: #fff;
+  }
+  
+  .galeri .galeri-wrap:hover::before {
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 1;
+  }
+  
+  .galeri .galeri-wrap:hover .galeri-info {
+	opacity: 1;
+	top: calc(50% - 48px);
+  }
+  
+  .galeri .galeri-wrap:hover .galeri-links {
+	opacity: 1;
+	bottom: calc(50% - 50px);
+  }
+  
+  /*--------------------------------------------------------------
+  # galeri Details
+  --------------------------------------------------------------*/
+  .galeri-details {
+	padding-top: 40px;
+  }
+  
+  .galeri-details .galeri-details-slider img {
+	width: 100%;
+  }
+  
+  .galeri-details .galeri-details-slider .swiper-pagination {
+	margin-top: 20px;
+	position: relative;
+  }
+  
+  .galeri-details .galeri-details-slider .swiper-pagination .swiper-pagination-bullet {
+	width: 12px;
+	height: 12px;
+	background-color: #fff;
+	opacity: 1;
+	border: 1px solid #5846f9;
+  }
+  
+  .galeri-details .galeri-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+	background-color: #5846f9;
+  }
+  
+  .galeri-details .galeri-info {
+	padding: 30px;
+	box-shadow: 0px 0 30px rgba(44, 73, 100, 0.08);
+  }
+  
+  .galeri-details .galeri-info h3 {
+	font-size: 22px;
+	font-weight: 700;
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #eee;
+  }
+  
+  .galeri-details .galeri-info ul {
+	list-style: none;
+	padding: 0;
+	font-size: 15px;
+  }
+  
+  .galeri-details .galeri-info ul li+li {
+	margin-top: 10px;
+  }
+  
+  .galeri-details .galeri-description {
+	padding-top: 30px;
+  }
+  
+  .galeri-details .galeri-description h2 {
+	font-size: 26px;
+	font-weight: 700;
+	margin-bottom: 20px;
+  }
+  
+  .galeri-details .galeri-description p {
+	padding: 0;
+  }
+  .img-galeri {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.mb-100{
+	margin-bottom: 100px;
 }
 
 .title-entry{
