--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -190,7 +190,7 @@
 
 .videos__large__item__text h4 {
 	color: #ffffff;
-	font-weight: 700;
+	font-weight: 500;
 }
 
 .videos__large__item__text ul li {
@@ -608,7 +608,7 @@
 
 .youtube__item__text h4 {
 	font-size: 17px;
-	color: #1b1b1b;
+	color:#444444;
 	line-height: 34px;
 	font-weight: 700;
 }
@@ -867,7 +867,7 @@
   }
   .img-galeri {
     width: 100%;
-    height: 200px;
+    height: 243px;
     object-fit: cover;
     object-position: center;
 }
@@ -890,3 +890,12 @@
 	font-weight: 600;
 	color: #1a1919;
 }
+
+.text-purple{
+	color: #5235e8;
+}
+
+.bg-primary-50 {
+    background-color: #f7f6fe;
+}
+
