--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -916,7 +916,7 @@
     align-items: center;
     margin: 20px 13px 10px;
     flex-direction: column;
-    background: #fff;
+    /* background: #fff; */
     transition: all 0.3s ease-in-out;
     border-radius: 15px;
     align-self: normal;
