--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -254,6 +254,7 @@
 	font-weight: 700;
 	line-height: 26px;
 	margin-bottom: 5px;
+	 font-size: 1.15rem;;
 }
 
 .videos__item__text ul li {
@@ -434,7 +435,7 @@
 
 .jp-current-time {
 	font-size: 15px;
-	/* color: #111111; */
+	color: #111111;
 	position: absolute;
 	left: -50px;
 	top: -9px;
@@ -442,7 +443,7 @@
 
 .jp-duration {
 	font-size: 15px;
-	/* color: #111111; */
+	color: #111111;
 	position: absolute;
 	right: 0;
 	top: 16px;
@@ -495,10 +496,17 @@
 
 .single_player_container h4 {
 	font-size: 26px;
-	/* color: #111111; */
+	color: #111111;
 	font-weight: 700;
 	margin-bottom: 20px;
 	text-transform: uppercase;
+}
+.single_player_container h5 {
+	font-size: 20px;
+	color: #111111;
+	font-weight: 700;
+	margin-bottom: 50px;
+	/* text-transform: uppercase; */
 }
 
 .track__pic {
@@ -506,7 +514,7 @@
 	z-index: 1;
 }
 
-.track__pic:after {
+/* .track__pic:after {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -515,15 +523,24 @@
 	background: #f5f5f5;
 	content: "";
 	z-index: -1;
-}
+} */
 
 .track__pic img {
 	position: relative;
-	top: -50px;
-	width: calc(100% - 40px);
-	margin-left: 40px;
-	height: 502px;
+	/* top: -50px; */
+	max-width: 100%;
+	/* margin-left: 40px; */
+	border-radius: 10px;
+	height: auto;
 }
+
+.player-box {
+    padding: 77px 121px 100px 81px;
+    border-radius: 24px;
+    background: #f2f4f5;
+}
+
+
 
 /*---------------------
   Youtube
@@ -904,6 +921,17 @@
     padding: 100px 0px;
 }
 
+.row-footer {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+}
+
 /* Article Card */
 
 .row-article {
@@ -991,7 +1019,7 @@
 
 .container-image {
 	position: relative;
-	width: 90%;
+	width: 100%;
   }
   
   .image {
@@ -1154,4 +1182,150 @@
     color: #1A73E8;
     font-weight: 500;
 }
+
+.streaming_playing_now {
+    white-space: nowrap;
+    overflow: hidden;
+    padding-left: 20px;
+    padding-right: 20px;
+    min-width: 150px;
+    max-width: 150px;
+    position: relative;
+}
+.bg-gen {
+    background-color: #da3514!important;
+    color: #fff!important;
+    border-color: #bac60a;
+}
+
+.header__button {
+    display: none;
+    color: #181919;
+    font-size: 14px;
+    line-height: 68px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background: #fdd340;
+    height: 67px;
+    width: 176px;
+    text-align: center;
+    margin-left: 22px;
+    padding: 0 30px;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+
+.header__button {
+    display: inline-block;
+}
+
+.header__button {
+    /* height: 85px; */
+    line-height: 85px;
+}
+
+.streaming_playing_now .default {
+    white-space: normal;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    width: 100%;
+    height: 70px;
+    line-height: normal;
+    text-align: left;
+}
+.streaming_playing_now .default span {
+    font-size: 10px;
+}
+.streaming_playing_now .default .default-button {
+    background: #333;
+    padding: 1px 3px;
+    border-radius: 3px;
+}
+
+.top_player {
+	width: 25%;
+	float: left;
+	padding: 0 0 0 60px;
+}
+
+.top_player .pic {
+	width: 50px;
+	float: left;
+	border: 2px solid #fff
+}
+
+.top_player .text {
+	width: calc(100% - 50px);
+	float: left;
+	padding-left: 10px;
+	margin-top: 8px
+}
+
+.top_player .text .status {
+    color: #fff;
+    font-size: 10px;
+    font-weight: 700;
+    background: #444;
+    width: 66%;
+    border-radius: 3px;
+    padding-left: 7px;
+    margin-bottom: 3px;
+    float: left;
+}
+
+.top_player .text h3 {
+	width: 100%;
+	float: left;
+	font-size: 14px;
+	font-weight: 700;
+	color: #da3a22;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis
+}
+
+.top_player .text span {
+	width: 100%;
+	float: left;
+	font-weight: 300;
+	font-size: 10px;
+	color: #fff
+}
+
+.is-circle {
+    overflow: hidden;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    /* -webkit-border-radius: 50%; */
+}
+.ratioo {
+	position: relative;
+	width: 100%;
+	float: left;
+	height: 0;
+	overflow: hidden
+}
+
+.ratioo1 {
+	padding-top: 100%
+}
+.ratioo img {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background: #da3a22;
+	position: absolute;
+	top: 0;
+	left: 0
+}
+
+.bg-red{
+	background: #da3a22;
+}
+
+
+/* Music Streaming */
 
