--- a/public/front-template/css/style.css
+++ b/public/front-template/css/style.css
@@ -9817,6 +9817,8 @@ textarea {
   height: 210px; }
 .retro-layout .b-height {
   height: 451px; }
+.retro-layout .p-height {
+  height: 300px; }
 
 @media (max-width: 767.98px) {
   .retro-layout .img {
