--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -374,12 +374,17 @@
 }
 
 .jp-play {
-	position: relative;
-	height: 50px;
-	width: 50px;
-	background: transparent;
-	border: 2px solid #e1e1e1;
-	border-radius: 50%;
+    font-size: 16px;
+    color: #5c00ce;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.3);
+    display: inline-block;
+    line-height: 60px;
+    text-align: center;
+    position: relative;
+    z-index: 1;
 }
 
 .jp-play:after {
@@ -439,7 +444,7 @@
 
 .jp-current-time {
 	font-size: 15px;
-	color: #111111;
+	color: #1e1e1e;
 	position: absolute;
 	left: -50px;
 	top: -9px;
@@ -447,7 +452,7 @@
 
 .jp-duration {
 	font-size: 15px;
-	color: #111111;
+	color: #1e1e1e;
 	position: absolute;
 	right: 0;
 	top: 16px;
@@ -463,7 +468,7 @@
 	font-size: 18px;
 	border: none;
 	background: none;
-	color: #111111;
+	color: #1e1e1e;
 	position: absolute;
 	left: 0;
 	top: 13px;
@@ -471,7 +476,7 @@
 
 .jp-volume-bar {
 	height: 5px;
-	width: 70px;
+	width: 310px;
 	background: #e1e1e1;
 	cursor: pointer;
 }
@@ -498,8 +503,8 @@
 	margin-bottom: 0;
 }
 
-.stream-title{
-	font-size: 30px;
+.stream-title h3{
+	font-size: 45px;
     color: #cb3030;
     font-weight: 700;
     margin-bottom: 20px;
@@ -507,9 +512,9 @@
 }
 
 .stream-sub{
-	font-size: 20px;
-    color: #111111;
-    font-weight: 700;
+    font-size: 30px;
+    color: #3e3b3b;
+    font-weight: 600;
     margin-bottom: 50px;
 }
 
@@ -654,6 +659,434 @@
 
 }
 
+/* Streaming */
+.player{
+	/* height: 95vh; */
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+  .wrapper{
+	border: 1px solid transparent;
+	padding: 30px;
+	border-radius: 20px;
+	background-color: #ddd;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
+  
+  .details {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  }
+  
+  .track-art {
+  margin: 25px;
+  height: 250px;
+  width: 250px;
+  /* border:2px solid 	#FFFAFA; */
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  /* -moz-box-shadow: 0px 6px 5px black;
+  -webkit-box-shadow: 0px 6px 5px black;
+  box-shadow: 0px 6px 5px black; */
+  -moz-border-radius:190px;
+  -webkit-border-radius:190px;
+  border-radius:190px;
+  }
+  
+  .now-playing {
+  font-size: 1rem;
+  }
+  
+  .track-name {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #cb1616;
+  text-transform:uppercase;
+  }
+  
+  .track-artist {
+  margin-top: 5px;
+  font-size: 1.1rem;
+  color: #252525;
+  text-transform: capitalize;
+  }
+  
+  .buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  }
+  .active{
+	  color: black;
+  }
+  
+  .repeat-track,
+  .random-track,
+  .playpause-track,
+  .prev-track,
+  .next-track {
+  padding: 25px;
+  opacity: 0.8;
+  transition: opacity .2s;
+  }
+  
+  .repeat-track:hover,
+  .random-track:hover,
+  .playpause-track:hover,
+  .prev-track:hover,
+  .next-track:hover {
+  opacity: 1.0;
+  }
+  
+  .slider_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+  
+  .seek_slider, .volume_slider {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 5px;
+  background: #83A9FF;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  }
+  
+  .seek_slider::-webkit-slider-thumb,
+  .volume_slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: white;
+  border: 3px solid #3774FF;
+  cursor: grab;
+  border-radius: 100%;
+  }
+  
+  .seek_slider:hover,
+  .volume_slider:hover {
+  opacity: 1.0;
+  }
+  
+  .seek_slider {
+  width: 60%;
+  }
+  
+  .volume_slider {
+  width: 50%;
+  }
+  
+  .current-time,
+  .total-duration {
+  padding: 10px;
+  }
+  
+  i.fa-volume-down,
+  i.fa-volume-up {
+  padding: 10px;
+  }
+  
+  i,
+  i.fa-play-circle,
+  i.fa-pause-circle,
+  i.fa-step-forward,
+  i.fa-step-backward{
+  cursor: pointer;
+  }
+  .randomActive{
+	  color: black;
+  }
+  .rotate {
+	  animation: rotation 8s infinite linear;
+  }
+  @keyframes rotation {
+	  from {
+		transform: rotate(0deg);
+	  }
+	  to {
+		transform: rotate(359deg);
+	  }
+  }
+  .visualizer {
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 30px;
+	/* margin-top: 30px; */
+  }
+  .visualizer .stroke{
+	  background: #f1f1f1;
+	  height: 150%;
+	  width: 10px;
+	  border-radius: 50px;
+	  margin: 0 5px;
+	  animation: animate 1.4s linear infinite;
+  }
+	@keyframes animate {
+	  50% {
+		height: 20%;
+		background: #e7332a;
+	  }
+  
+	  100% {
+		background: #e7332a;
+		height: 100%;
+	  }
+	}
+	.stroke:nth-child(1){
+		animation-delay: 0s;
+	}
+	.stroke:nth-child(2){
+	  animation-delay: 0.3s;
+  }
+  .stroke:nth-child(3){
+	  animation-delay: 0.6s;
+  }
+  .stroke:nth-child(4){
+	  animation-delay: 0.9s;
+  }
+  .stroke:nth-child(5){
+	  animation-delay: 0.6s;
+  }
+  .stroke:nth-child(6){
+	  animation-delay: 0.3s;
+  }
+  .stroke:nth-child(7){
+	  animation-delay: 0s;
+  }
+
+  /*---------------------
+  Skills
+-----------------------*/
+
+.skills {
+	padding-bottom: 80px;
+	padding-top: 80px;
+}
+
+.skills__content {
+	height: 500px;
+	padding: 30px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+	background-image: url(../images/left-dec.jpg);
+	background-size: cover;
+	/* background-position: center; */
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+}
+
+
+.skills__content .section-title h2 {
+	color: #ffffff;
+}
+
+.skills__content .section-title h1 {
+	color: #ffffff;
+	opacity: 0.1;
+	text-align: center;
+}
+
+.skills__content p {
+	color: #ffffff;
+	margin-bottom: 32px;
+}
+
+.skill__bar__item {
+	margin-bottom: 20px;
+}
+
+.skill__bar__item p {
+	font-size: 15px;
+	font-weight: 500;
+	color: #ffffff;
+	margin-bottom: 10px;
+}
+
+.skill__bar__item .barfiller {
+	width: 100%;
+	height: 5px;
+	background: rgba(255, 255, 255, 0.2);
+	border: none;
+	margin-bottom: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.skill__bar__item .barfiller .tip {
+	margin-top: -32px;
+	padding: 0;
+	font-size: 15px;
+	color: #fff;
+	background: transparent;
+}
+
+.skill__bar__item .barfiller .tip:after {
+	display: none;
+}
+
+.skills__video {
+	height: 500px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
+}
+
+.skills__video .play-btn {
+	font-size: 26px;
+	color: #5c00ce;
+	height: 90px;
+	width: 90px;
+	border-radius: 50%;
+	background: rgba(117, 31, 221, 0.3);
+	display: inline-block;
+	line-height: 90px;
+	text-align: center;
+	position: relative;
+	z-index: 1;
+}
+
+.skills__video .play-btn i {
+	position: relative;
+	top: 2px;
+	left: 2px;
+}
+
+.skills__video .play-btn:after {
+	position: absolute;
+	left: 15px;
+	top: 15px;
+	height: 60px;
+	width: 60px;
+	background: #ffffff;
+	border-radius: 50%;
+	content: "";
+	z-index: -1;
+}
+
+.img-box {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+.img-box .play_btn {
+	background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    border-radius: 100%;
+    width: 75px;
+    height: 75px;
+    position: relative;
+    z-index: 3;
+}
+.img-box .play_btn a {
+    background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    border-radius: 100%;
+    width: 72px;
+    height: 72px;
+    position: relative;
+    z-index: 5;
+}
+
+img-box .play_btn img {
+    width: 20px;
+    margin-left: 3px;
+}
+
+.btn-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-top: 75px;
+}
+
+.btn-box a {
+    display: inline-block;
+    padding: 10px 45px;
+    background-color: #ffffff;
+    color: #000000;
+    border: 1.5px solid #ffffff;
+    border-radius: 5px;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+}
+
+
+  @keyframes before-animation {
+    0% {
+      transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+      opacity: 1;
+    }
+
+    100% {
+      transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+      opacity: 0;
+    }
+  }
+
+  
+
+.img-box .play_btn::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #c01010;
+    opacity: 1;
+    border-radius: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+	z-index: 2;
+    -webkit-animation: before-animation 2s infinite;
+    animation: before-animation 2s infinite;
+}
+
 /*---------------------
   About
 -----------------------*/
@@ -684,6 +1117,11 @@
 	color: #111111;
 }
 
+.about__pic img {
+	width: 70%;
+	border-radius: 10px;
+}
+
 .about__text {
 	padding-top: 110px;
 }
@@ -697,7 +1135,8 @@
 -----------------------*/
 
 .about-services {
-	padding-bottom: 50px;
+	padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .about-services .section-title {
@@ -1106,7 +1545,7 @@
   
   .text-program {
 	color: white;
-	font-size: 20px;
+	font-size: 15px;
 	font-weight: 600;
 	text-transform: uppercase;
 	position: absolute;
@@ -1381,6 +1820,15 @@
 
 .bg-red{
 	background: #da3a22;
+}
+
+.rounded-full{
+	border-radius: 50%;
+}
+
+.events{
+	padding-top: 80px;
+	padding-bottom: 80px;
 }
 
 
