fix bug user edit

--- a/public/front-template/css/custom.css
+++ b/public/front-template/css/custom.css
@@ -1,6 +1,47 @@
  
   @import url('https://fonts.cdnfonts.com/css/rockville-solid');
  
+
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+
+.dd-button {
+  display: inline-block;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 10px 30px 10px 20px;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.dd-button:hover {
+  background-color: #eeeeee;
+}
+
+.dd-menu {
+  position: absolute;
+  top: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0;
+  margin: 2px 0 0 0;
+  box-shadow: 0 0 6px 0 rgba(0,0,0,0.1);
+  background-color: #ffffff;
+  list-style-type: none;
+  display: none;
+}
+
+.dd-menu.toggled {
+  display: block;
+} 
+
+.dd-menu li {
+  padding: 5px 30px;
+  white-space: nowrap;
+}
+  
  /*---------------------
   Tours
 -----------------------*/
